[package]
name = "gaby"
version = "0.1.0"
authors = ["Håkon Marthinsen <hakon.marthinsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34.1"
features = ["bundled"]
